# GameFramework

./: CMakeLists.txt
framework/: CMakeLists.txt
framework/include/PeterGameFramework/: FrameworkActor.h  PeterGameFramework.h
framework/src/: FrameworkActor.cpp  PeterGameFramework.cpp
platformer/: CMakeLists.txt
platformer/src/: main.cpp
